--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
     {% if request.session.get('es_admin') %}
     <a href="/financiador/usuarios" class="btn btn-sm btn-outline-light ms-2">Panel usuarios</a>
     {% endif %}
+
+    <!-- Bootstrap JS Bundle (requerido para tabs y otros componentes interactivos) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
