--- a/templates/middle/registro_pagador.html
+++ b/templates/middle/registro_pagador.html
@@ -14,7 +14,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="rut" class="form-label">RUT</label>
-                    <input type="text" class="form-control" id="rut" name="rut" required>
+                    <input type="text" class="form-control" id="rut" name="rut" placeholder="Ej: 762623706" required>
+                    <div class="form-text text-muted">Ingresa el RUT sin puntos ni guion. Incluye dígito verificador.</div>
                 </div>
                 <div class="mb-3">
                     <label for="usuario" class="form-label">Usuario</label>
