--- a/templates/costo_fondos.html
+++ b/templates/costo_fondos.html
@@ -17,7 +17,7 @@
 {% endif %}
 
 <form method="post" action="/financiador/costo-fondos" style="max-width: 300px;">
-  <label for="nuevo_costo" class="form-label">Costo de fondos (% anual)</label>
+  <label for="nuevo_costo" class="form-label">Costo de fondos (% mensual)</label>
   <input type="number"
          step="0.01"
          name="nuevo_costo_mensual"
