--- a/templates/ofertar.html
+++ b/templates/ofertar.html
@@ -22,7 +22,7 @@
   {% endif %}
     
     <div class="mb-3">
-      <label for="tasa_interes" class="form-label">Tasa de interés (%)</label>
+      <label for="tasa_interes" class="form-label">Spread mensual (%)</label>
       <input type="number"
              step="0.01"
              name="tasa_interes"
